# vmware-downloads

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  requirements.txt
.audit-reports/: audit-2026-07-16.md  audit-report-vmware-downloads-2026-07-08-v3.md  audit-report-vmware-downloads-2026-07-08-v4.md  audit-report-vmware-downloads-2026-07-08-v5.md  audit-report-vmware-downloads-2026-07-08.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  codeql.yml  (+3 more)
aria2/: download.ps1  download.sh  vmware-fusion-pro.aria2  vmware-sha256.txt  vmware-workstation-pro.aria2
data/: broadcom_metadata.json  checksums.sha1.txt  checksums.txt  sha256_cache.json  vmware_downloads.json
docs/: ARCHITECTURE.md
scripts/: collect_vmware_links.py  detect_data_changes.py  fetch_broadcom.py  probe_archive_org.py  probe_broadcom.py  probe_broadcom_api.py  probe_broadcom_detail.py  probe_broadcom_full.py  probe_broadcom_network.py  reparse_broadcom.py  scan_virustotal.py  summarize_changes.py  upload_releases.py
tests/: test_archive_common.py  test_broadcom.py  test_collect_vmware_links_log.py  test_collector.py  test_detail_parser.py  test_detect_changes.py  test_fetch_broadcom_log.py  test_legacy_merger.py  test_logs.py  test_merge.py  test_parser.py  test_renderer.py  test_renderer_legacy.py  test_renderer_vt.py  test_schema.py  test_summarize.py  test_vt_scanner.py
(+11 files in other folders)
