[project]
name = "vmware-downloads"
version = "2.0.0"
description = "自动收集 VMware Workstation/Fusion 下载链接"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "playwright>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
# 库代码强制覆盖，IO 入口脚本（Playwright 抓取、CLI 主入口、调研工具）豁免。
# 因为它们依赖网络/浏览器/文件系统，mock 收益低于代价，改为 CI 手动冒烟。
source = ["scripts/vmware_lib"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501 由 formatter 处理；UP017 建议 datetime.UTC 是 3.11+ alias，我们保留 timezone.utc 兼容更广
ignore = ["E501", "UP017"]
